crates/xlate/tests/snapshots/golden_matrix__gpt6_text__gpt-6-astra__20260910__responses_to_chat__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": "Say hello in one short sentence."
    }
  ],
  "max_completion_tokens": 64,
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
--- headers ---
upstream_streams: true
--- degraded ---
