crates/xlate/tests/snapshots/golden_matrix__gpt6_text__gpt-6-astra__20260910__responses_to_chat__openai_compatible.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "llama-x",
  "messages": [
    {
      "role": "user",
      "content": "Say hello in one short sentence."
    }
  ],
  "max_tokens": 64,
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
--- headers ---
upstream_streams: true
--- degraded ---
